--- a/bib/LIS501.bib
+++ b/bib/LIS501.bib
@@ -1099,10 +1099,13 @@ Conclusion. It is argued that this conception of browsing is closer to real huma
 	pages = {71--106}
 }
 
-@misc{_secret_????,
+@misc{wright_secret_2014,
 	title = {The {Secret} {History} of {Hypertext} — {The} {Atlantic}},
 	url = {http://www.theatlantic.com/technology/archive/2014/05/in-search-of-the-proto-memex/371385/},
-	urldate = {2015-04-15TZ}
+	urldate = {2015-04-15TZ},
+	author = {Wright, Alex},
+	month = may,
+	year = {2014}
 }
 
 @book{wright_cataloging_2014,
