Updated bibliography files

--- a/bib/ResearchBackground.bib
+++ b/bib/ResearchBackground.bib
@@ -40,3 +40,17 @@
 	year = {1995},
 	pages = {161--199}
 }
+
+@incollection{connaway_selecting_2010,
+	address = {Santa Barbara, Calif},
+	series = {Library and {Information} {Science} {Text} {Series}},
+	title = {Selecting the {Research} {Method}},
+	isbn = {9781591588634},
+	url = {http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=348676&site=ehost-live},
+	booktitle = {Basic {Research} {Methods} for {Librarians}},
+	publisher = {Libraries Unlimited},
+	author = {Connaway, Lynn Silipigni and Powell, Ronald R.},
+	year = {2010},
+	keywords = {LANGUAGE ARTS \& DISCIPLINES / Library \& Information Science / General, Library science--Research--Methodology},
+	pages = {71--106}
+}
