Added 1 req reading W1, switched 1 from req to bac W4

--- a/SecAFall16.tex
+++ b/SecAFall16.tex
@@ -50,7 +50,7 @@
 
 \title{Information Organization and Access}
 \author{University of Illinois School of Information Sciences}
-\date{Thu, Aug 4, 2016 9:56:00 AM}
+\date{Sun, Aug 7, 2016 3:12:24 PM}
 
 \begin{document}
 \maketitle
@@ -439,7 +439,9 @@ Week 1, August 23: LIS Education and professional life
   (Levie and Sofidoc Productions.
   \protect\hyperlink{ref-levieux5fmanux5f2004}{2004}).
 \item
-  Required: (Lavoie, Dempsey, and Connaway
+  Required: (Ferraris
+  \protect\hyperlink{ref-ferrarisux5fsocialux5f2011}{2011}), (Lavoie,
+  Dempsey, and Connaway
   \protect\hyperlink{ref-lavoieux5fmakingux5f2006}{2006}), (Dyson
   \protect\hyperlink{ref-dysonux5fhowux5f2011}{2011}), (Bush
   \protect\hyperlink{ref-bushux5fasux5f1945}{1945}), (Buckland
@@ -498,13 +500,14 @@ Week 4, September 13: Structures and Standards
 \tightlist
 \item
   Background: (Glushko
-  \protect\hyperlink{ref-glushkoux5fdescribingux5f2015}{2015}\protect\hyperlink{ref-glushkoux5fdescribingux5f2015}{b}).
+  \protect\hyperlink{ref-glushkoux5fdescribingux5f2015}{2015}\protect\hyperlink{ref-glushkoux5fdescribingux5f2015}{b}),
+  (Bettels and Bishop
+  \protect\hyperlink{ref-bettelsux5funicode:ux5f1993}{1993}).
 \item
   Required: (Vogt
   \protect\hyperlink{ref-vogtux5fescienceux5f2013}{2013}), (DeRose
-  \protect\hyperlink{ref-deroseux5fwhatux5f2014}{2014}), (Bettels and
-  Bishop \protect\hyperlink{ref-bettelsux5funicode:ux5f1993}{1993}),
-  (Coombs, Renear, and DeRose
+  \protect\hyperlink{ref-deroseux5fwhatux5f2014}{2014}), (Coombs,
+  Renear, and DeRose
   \protect\hyperlink{ref-coombsux5fmarkupux5f1987}{1987}).
 \end{itemize}
 
@@ -759,6 +762,14 @@ Information Practice and Research} 8 (1).
 Dyson, Freeman. 2011. ``How We Know.'' \emph{The New York Review of
 Books}, March.
 \url{http://www.nybooks.com/articles/archives/2011/mar/10/how-we-know/}.
+
+\hypertarget{ref-ferrarisux5fsocialux5f2011}{}
+Ferraris, Maurizio. 2011. ``Social Ontology and Documentality.'' In
+\emph{Approaches to Legal Ontologies: Theories, Domains, Methodologies},
+edited by Giovanni Sartor, Pompeu Casanovas, Mariangela Biasiotti, and
+Meritxell Fernández-Barrera, 1:83--97. Law, Governance and Technology
+Series. Dordrecht: Springer Netherlands.
+\url{http://dx.doi.org/10.1007/978-94-007-0120-5_5}.
 
 \hypertarget{ref-fidelux5fareux5f2008}{}
 Fidel, Raya. 2008. ``Are We There yet?: Mixed Methods Research in
