--- a/bib/LIS501.bib
+++ b/bib/LIS501.bib
@@ -1,4 +1,18 @@
 
+@incollection{ferraris_social_2011,
+	address = {Dordrecht},
+	series = {Law, {Governance} and {Technology} {Series}},
+	title = {Social {Ontology} and {Documentality}},
+	volume = {1},
+	url = {http://dx.doi.org/10.1007/978-94-007-0120-5_5},
+	booktitle = {Approaches to {Legal} {Ontologies}: {Theories}, {Domains}, {Methodologies}},
+	publisher = {Springer Netherlands},
+	author = {Ferraris, Maurizio},
+	editor = {Sartor, Giovanni and Casanovas, Pompeu and Biasiotti, Mariangela and Fernández-Barrera, Meritxell},
+	year = {2011},
+	pages = {83--97}
+}
+
 @misc{american_library_assocation_knowledge_2006,
 	type = {Text},
 	title = {Knowledge and competencies statements developed by relevant professional organizations},
