--- a/bib/StructuresBackground.bib
+++ b/bib/StructuresBackground.bib
@@ -9,3 +9,16 @@
 	year = {2015},
 	pages = {295--344}
 }
+
+@article{bettels_unicode:_1993,
+	title = {Unicode: {A} {Universal} {Character} {Code}},
+	volume = {5},
+	issn = {0898-901X},
+	url = {http://www.hpl.hp.com/hpjournal/dtj/vol5num3/vol5num3art2.pdf},
+	number = {3},
+	journal = {Digital Tech. J.},
+	author = {Bettels, Jürgen and Bishop, F. Avery},
+	month = jun,
+	year = {1993},
+	pages = {21--31}
+}
