--- a/ActionItems.org
+++ b/ActionItems.org
@@ -13,3 +13,5 @@
     DEADLINE: <2016-08-15 Mon>
 *** TODO When does Chris need to attend lab?
     DEADLINE: <2016-08-12 Fri>
+*** TODO Get the bibliography stylesheet working
+    DEADLINE: <2016-08-13 Sat>
