Action items update

--- a/ActionItems.org
+++ b/ActionItems.org
@@ -1,11 +1,11 @@
 * Action Items for Fall, 2016 LIS501
 
 ** Syllabus-related
-*** TODO Middle Schoolers at Spurlock week of the 16th. Do we rescedule that lab?
+*** DONE Middle Schoolers at Spurlock week of the 16th. Do we rescedule that lab?
     DEADLINE: <2016-08-08 Mon>
-*** TODO Decision about Glushko: 1st or 3rd edition?
+*** DONE Decision about Glushko: 1st or 3rd edition?
     DEADLINE: <2016-08-08 Mon>
-*** TODO Ask for a combined meta section if we want one.
+*** DONE Ask for a combined meta section if we want one.
     DEADLINE: <2016-08-08 Mon>
 *** TODO Finalize third assignment description
     DEADLINE: <2016-08-12 Fri>
