--- a/bib/ApproachesRequired.bib
+++ b/bib/ApproachesRequired.bib
@@ -29,10 +29,21 @@
 	year = {2015}
 }
 
-@article{swoger_._2012,
-	title = {. {What} is metadata? {A} {Christmas}-themed exploration. {Info} {Culture}.},
+@article{swoger_what_2012,
+	title = {What is metadata? {A} {Christmas}-themed exploration. {Info} {Culture}.},
 	url = {http://blogs.scientificamerican.com/information- culture/2012/12/17/what-is-metadata-a-christmas-themed-exploration/},
 	journal = {Sicientific American},
 	author = {Swoger, B.},
 	year = {2012}
+}
+
+@article{olson_power_2001,
+	title = {The power to name: {Representation} in library catalogs},
+	volume = {26},
+	url = {http://www.jstor.org/stable/3175535},
+	number = {3},
+	journal = {Signs},
+	author = {Olson, Hope A},
+	year = {2001},
+	pages = {639--668}
 }
