--- a/bib/LIS501.bib
+++ b/bib/LIS501.bib
@@ -566,8 +566,8 @@ le processus d'apprentissage.},
 	year = {2015}
 }
 
-@article{swoger_._2012,
-	title = {. {What} is metadata? {A} {Christmas}-themed exploration. {Info} {Culture}.},
+@article{swoger_what_2012,
+	title = {What is metadata? {A} {Christmas}-themed exploration. {Info} {Culture}.},
 	url = {http://blogs.scientificamerican.com/information- culture/2012/12/17/what-is-metadata-a-christmas-themed-exploration/},
 	journal = {Sicientific American},
 	author = {Swoger, B.},
