Syllabus content and structuring updates

--- a/SecAFall16.tex
+++ b/SecAFall16.tex
@@ -50,7 +50,7 @@
 
 \title{Information Organization and Access}
 \author{University of Illinois School of Information Sciences}
-\date{Sun, Aug 7, 2016 3:12:24 PM}
+\date{Sat, Aug 13, 2016 9:05:16 PM}
 
 \begin{document}
 \maketitle
@@ -282,13 +282,13 @@ Labs:
 \item
   ITD on computing resources (September 1)
 \item
+  Research methods exercise (September 8)
+\item
+  Pandoc encoding and transformation (September 15)
+\item
+  Cultural heritage object description (September 22)
+\item
   Zotero bibliography and formatting (September 29)
-\item
-  Cultural heritage object description (September 15)
-\item
-  Research methods exercise (September 22)
-\item
-  Pandoc encoding and transformation (September 8)
 \item
   Bibo/DC output from Zotero (October 6)
 \item
@@ -373,14 +373,28 @@ studies}\label{strategies-for-locating-research-studies}
 
 Articles indexed under the subject ``Information needs'' or
 ``Information-seeking behavior'' in Library \& Information Science
-Source (link from \url{http://www.library.illinois.edu/lsx/}
-\url{http://openurl.library.uiuc.edu/sfxlcl3/az)}
+Source:
+
+\begin{itemize}
+\tightlist
+\item
+  \url{http://www.library.illinois.edu/lsx/}
+\item
+  \url{http://openurl.library.uiuc.edu/sfxlcl3/az}
+\end{itemize}
 
 Articles indexed under the descriptor ``Information seeking behaviour''
-or ``User needs'' in LISA (link from
-\url{http://www.library.illinois.edu/lsx/}
-\url{http://openurl.library.uiuc.edu/sfxlcl3/az}
-\url{http://www.library.uiuc.edu/orr/results.php?types=A\&subject=29)}
+or ``User needs'' in LISA:
+
+\begin{itemize}
+\tightlist
+\item
+  \url{http://www.library.illinois.edu/lsx/}
+\item
+  \url{http://openurl.library.uiuc.edu/sfxlcl3/az}
+\item
+  \url{http://www.library.uiuc.edu/orr/results.php?types=A\&subject=29}
+\end{itemize}
 
 Studies need not be recently published, but an example of a recent study
 of this type is the following:
@@ -419,9 +433,158 @@ title. If the text is not available online, you will need to request a
 copy of the article. See the LibGuide for Online and Continuing
 Education Student Resources from the Library:
 
-\url{http://uiuc.libguides.com/content.php?pid=28713\&sid=209698}
-\url{http://uiuc.libguides.com/content.php?pid=28713\&sid=214766}
-\url{http://uiuc.libguides.com/content.php?pid=28713\&sid=214766}
+\begin{itemize}
+\tightlist
+\item
+  \url{http://uiuc.libguides.com/content.php?pid=28713\&sid=209698}
+\item
+  \url{http://uiuc.libguides.com/content.php?pid=28713\&sid=214766}
+\item
+  \url{http://uiuc.libguides.com/content.php?pid=28713\&sid=214766}
+\end{itemize}
+
+\section{Assignment 2 Digital Collections Assessment}\label{Asgt2}
+
+\subsection{Summary}\label{summary}
+
+Pick one DPLA exhibition, or one Flickr gallery or one Europeana
+pinterest board as an exemplar for your analysis. write a narrative
+assessment of the content, organization, and potential users and uses.
+
+Due October due date at 11:59 PM. This assignment is worth 20 points.
+
+\subsection{Before you begin}\label{before-you-begin}
+
+Read the required assigned readings for our collections topic before
+starting this assignment. The background readings will also make your
+task easier.
+
+\subsection{Rationale}\label{rationale-1}
+
+The reading and discussion topic for week 5 is the nature of
+collections, challenges we face in making their contents accessible, and
+ways in which perspectives of librarians, archivists, and information
+scientists contribute to meeting those challenges. In bringing a
+critical, reviewer's attention to an existing digital collection, those
+issues will become more vivid and understandable to you.
+
+\subsection{Tasks}\label{tasks-1}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  Pick a topic of interest to you; perhaps something related to your
+  final project.
+\item
+  Browse across these three differing approaches to digital collections:
+
+  \begin{itemize}
+  \tightlist
+  \item
+    \href{http://dp.la/exhibitions}{DPLA exhibitions} (28 exhibitions)
+  \item
+    \href{https://www.flickr.com/photos/flickr/galleries}{FLICKR
+    galleries} (there are 322)
+  \item
+    \href{https://www.pinterest.com/europeana/}{Europeana Pinterest
+    boards} (74 boards).
+  \end{itemize}
+\item
+  For the exemplar you select, write a narrative assessment of the
+  content, organization, and potential users and uses. Include the
+  following considerations:
+
+  \begin{itemize}
+  \tightlist
+  \item
+    How easy was it for you to find your exemplar?
+  \item
+    Was it hard to determine what individual or institution is
+    responsible for your exemplar?
+  \item
+    Would it be appropriate to call your exemplar a collection? If so,
+    why? If not, why not?
+  \item
+    What categories of users is your exemplar intended to serve?
+  \item
+    How would you characterize the content and scope of your exemplar?
+  \item
+    Can a user easily grasp the scope and arrangement?
+  \item
+    How do the available content and organization serve the needs of the
+    intended users?
+  \item
+    Does the exemplar meet or exceed expectations for accessibility?
+  \end{itemize}
+\end{enumerate}
+
+\subsection{Deliverables}\label{deliverables}
+
+The essay should be a 750-800 word evaluative essay with an introduction
+and conclusion. Integrate relevant readings in support of your arguments
+as appropriate. PDF, docx, and Pandoc markdown are all acceptable file
+formats. Pandoc expression requires a separate bibliography file, unless
+your references and citations are formatted at the markdown source level
+(by hand, via Zotero, etc.).
+
+\subsection{Submitting}\label{submitting-1}
+
+Upload the essay to the Moodle section designated for this assignment.
+
+\subsection{Resources}\label{resources}
+
+These resources may be useful for completing this assignment.
+
+\begin{itemize}
+\tightlist
+\item
+  Required readings for the Collections topic:
+
+  \begin{itemize}
+  \tightlist
+  \item
+    \url{https://www.zotero.org/groups/lis501/items/collectionKey/IND4XSQX}
+  \end{itemize}
+\item
+  Background readings for the Collections topic:
+
+  \begin{itemize}
+  \tightlist
+  \item
+    \url{https://www.zotero.org/groups/lis501/items/collectionKey/Z8V7XKUD}\\
+  \end{itemize}
+\item
+  Digital Public Library (DPLA) exhibitions
+
+  \begin{itemize}
+  \tightlist
+  \item
+    \url{http://dp.la/exhibitions}
+  \item
+    \url{https://docs.google.com/document/d/1caBYKDdQCpFCildS5XquNML5YzaugSL7Jf3CdBIIqOA/edit}
+  \end{itemize}
+\item
+  FLICKR galleries
+
+  \begin{itemize}
+  \tightlist
+  \item
+    \url{https://www.flickr.com/photos/flickr/galleries}
+  \item
+    \url{https://www.flickr.com/help/galleries/}
+  \end{itemize}
+\item
+  EUROPEANA Pinterest boards
+
+  \begin{itemize}
+  \tightlist
+  \item
+    \url{https://www.pinterest.com/europeana/}
+  \item
+    \url{http://blog.europeana.eu/2015/01/explore-our-new-pinterest-boards/}
+  \end{itemize}
+\end{itemize}
 
 \section{Topic Schedule}\label{topic-schedule}
 
@@ -523,7 +686,8 @@ Week 5, September 20: Approaches to organizing information
   \protect\hyperlink{ref-kennedyux5fnineux5f2008}{2008}), (Maxwell
   \protect\hyperlink{ref-maxwellux5fbibliographicux5f2010}{2010}),
   (Warren \protect\hyperlink{ref-warrenux5f2015ux5f2015}{2015}), (Swoger
-  \protect\hyperlink{ref-swogerux5f.ux5f2012}{2012}).
+  \protect\hyperlink{ref-swogerux5fwhatux5f2012}{2012}), (Olson
+  \protect\hyperlink{ref-olsonux5fpowerux5f2001}{2001}).
 \end{itemize}
 
 Week 6, September 27: Collections
@@ -610,8 +774,8 @@ Week 10, October 25: Subject analysis and subject languages
   \protect\hyperlink{ref-brown-sicaux5flibraryux5f2008}{2008}).
 \end{itemize}
 
-\section*{References}\label{references}
-\addcontentsline{toc}{section}{References}
+\section*{Readings}\label{readings}
+\addcontentsline{toc}{section}{Readings}
 
 \hypertarget{refs}{}
 \hypertarget{ref-adkinsux5ffictionux5f2007}{}
@@ -919,6 +1083,11 @@ Naumer, Charles M., and Karen E. Fisher. 2009. ``Information Needs.'' In
 null:2452--8. null. Taylor \& Francis.
 \url{http://www.tandfonline.com/doi/abs/10.1081/E-ELIS3-120043243}.
 
+\hypertarget{ref-olsonux5fpowerux5f2001}{}
+Olson, Hope A. 2001. ``The Power to Name: Representation in Library
+Catalogs.'' \emph{Signs} 26 (3): 639--68.
+\url{http://www.jstor.org/stable/3175535}.
+
 \hypertarget{ref-saarinenux5fsignux5f2013}{}
 Saarinen, Katariina, and Pertti Vakkari. 2013. ``A Sign of a Good Book:
 Readers' Methods of Accessing Fiction in the Public Library.''
@@ -943,8 +1112,8 @@ and Arrangement for Multicultural Archival Collections.''
 \emph{Archivaria} 63: 87.
 \url{http://rameshsrinivasan.org/wordpress/wp-content/uploads/2010/03/8-Final-ShiltonSrinivasan-Archivaria.pdf}.
 
-\hypertarget{ref-swogerux5f.ux5f2012}{}
-Swoger, B. 2012.`` What Is Metadata? A Christmas-Themed Exploration.
+\hypertarget{ref-swogerux5fwhatux5f2012}{}
+Swoger, B. 2012. ``What Is Metadata? A Christmas-Themed Exploration.
 Info Culture.'' \emph{Sicientific American}.
 \href{http://blogs.scientificamerican.com/information-\%20culture/2012/12/17/what-is-metadata-a-christmas-themed-exploration/}{http://blogs.scientificamerican.com/information- culture/2012/12/17/what-is-metadata-a-christmas-themed-exploration/}.
 
