--- a/ActionItems.org
+++ b/ActionItems.org
@@ -11,7 +11,46 @@
     DEADLINE: <2016-08-12 Fri>
 *** TODO Add TA contact information to syllabus
     DEADLINE: <2016-08-15 Mon>
+*** DONE Get the bibliography stylesheet working
+    CLOSED: [2016-08-13 Sat 16:36] DEADLINE: <2016-08-13 Sat>
+*** TODO Minor fix on Swoger journal title approaches reqd
+    DEADLINE: <2016-08-20 Sat>
+*** TODO Check URL on Maxwell bibliographic control reading
+    DEADLINE: <2016-08-20 Sat>
+*** DONE Web links at the end of Assignment 1 (see pdf and html)
+    CLOSED: [2016-08-13 Sat 21:13] DEADLINE: <2016-08-13 Sat>
+*** DONE Labs schedule should reflect changes in outline
+    CLOSED: [2016-08-13 Sat 21:13] DEADLINE: <2016-08-13 Sat>
+*** TODO British spelling of behavior in assignment 1?
+    DEADLINE: <2016-08-20 Sat>
+*** TODO Consider generic stylesheet for html (header includes)
+*** DONE Replace Asgt 2 due date with macro in task file
+    CLOSED: [2016-08-13 Sat 21:13] DEADLINE: <2016-08-13 Sat>
+*** DONE Asgt 2 Resource URLs (try lists, see pdf)
+    CLOSED: [2016-08-13 Sat 21:14] DEADLINE: <2016-08-13 Sat>
+*** TODO Choose actual due dates for major assignments, and set macro replacements
+    DEADLINE: <2016-08-20 Sat>
+*** TODO Instructor order (1,2,3) different in section syllabi
+    DEADLINE: <2016-08-13 Sat>
+
+*** TODO Check links in assignment 1, and consider abbreviating
+    DEADLINE: <2016-08-17 Wed>
+*** TODO Check links in assignment 2, and consider abbreviating
+    DEADLINE: <2016-08-17 Wed>
+    
+** Logistics
+*** TODO Can I get a gallery tour order for the 6th graders? Want to keep ahead 
+    DEADLINE: <2016-08-20 Sat>
+
 *** TODO When does Chris need to attend lab?
     DEADLINE: <2016-08-12 Fri>
-*** TODO Get the bibliography stylesheet working
-    DEADLINE: <2016-08-13 Sat>
+
+
+** Presentations
+*** TODO Week 1 slides update 
+    DEADLINE: <2016-08-17 Wed>
+
+
+** Labs
+*** TODO Template for CHO description
+    DEADLINE: <2016-08-20 Sat>
