--- a/SecAFall16.tex
+++ b/SecAFall16.tex
@@ -50,7 +50,7 @@
 
 \title{Information Organization and Access}
 \author{University of Illinois School of Information Sciences}
-\date{Sat, Aug 13, 2016 9:05:16 PM}
+\date{Sun, Aug 14, 2016 1:33:01 PM}
 
 \begin{document}
 \maketitle
@@ -60,6 +60,12 @@ Fall 2016\\
 Tuesday 1:00-2:50pm Room 126\\
 Thursday 1:00-3:50pm Room 46\\
 4 credit hours
+
+Instructor: Jodi Schneider\\
+Email: jschne23@illinois.edu\\
+Office: LIS 334\\
+Office Hour: TBA\\
+Phone: TBD
 
 Instructor: Maria Bonn\\
 Email: mbonn@illinois.edu\\
@@ -73,11 +79,11 @@ Office: LIS 330\\
 Office Hour: Wednesdays, 2-5pm and by appointment\\
 Phone: (217) 244-3275
 
-Instructor: Jodi Schneider\\
-Email: jschne23@illinois.edu\\
-Office: LIS 334\\
-Office Hour: TBA\\
-Phone: TBD
+Teaching Assistant: Christine D'Arpa\\
+Email: cdarpa2@illinois.edu\\
+Office:\\
+Office Hour:\\
+Phone:
 
 \section{Course Description}\label{course-description}
 
@@ -104,7 +110,7 @@ The central themes of the course are:
   Who uses information, how they use it, and what constraints shape
   their use of information;
 \item
-  How recorded knowledge can be organized and structured;\\
+  How recorded knowledge can be organized and structured;
 \item
   Ways of providing access to the world's knowledge.
 \end{enumerate}
@@ -192,6 +198,13 @@ UIUC), mathematics (M.A.~UT-Austin), and liberal arts (B.A., Great
 Books, St.~John's College). She worked in academic libraries and
 bookstores for 6 years. She has also held research positions across the
 U.S. as well as in Ireland, England, France, and Chile.
+
+\section{About Chris D'Arpa}\label{about-chris-darpa}
+
+Christine D'Arpa's research seeks to understand how archives, libraries,
+and other public information institutions can help reinvigorate public
+commitment to civic education and engagement, and participation in
+public policy development.
 
 \section{Library Resources}\label{library-resources}
 
@@ -383,7 +396,7 @@ Source:
   \url{http://openurl.library.uiuc.edu/sfxlcl3/az}
 \end{itemize}
 
-Articles indexed under the descriptor ``Information seeking behaviour''
+Articles indexed under the descriptor ``Information seeking behavior''
 or ``User needs'' in LISA:
 
 \begin{itemize}
@@ -562,7 +575,7 @@ These resources may be useful for completing this assignment.
   \item
     \url{http://dp.la/exhibitions}
   \item
-    \url{https://docs.google.com/document/d/1caBYKDdQCpFCildS5XquNML5YzaugSL7Jf3CdBIIqOA/edit}
+    \url{http://tinyurl.com/DPLAguidelines}
   \end{itemize}
 \item
   FLICKR galleries
@@ -1064,7 +1077,7 @@ Francis. \url{http://dx.doi.org/10.1081/E-ELIS3-120045519}.
 \hypertarget{ref-maxwellux5fbibliographicux5f2010}{}
 Maxwell, R.L. 2010. ``Bibliographic Control. 497-505.''
 \emph{Encyclopedia of Library and Information Sciences,}
-\href{locate\%20from:\%20http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html\%5D}{locate from: http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html{]}}.
+\url{http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html}.
 
 \hypertarget{ref-miksaux5finformationux5f2009}{}
 Miksa, Francis. 2009. ``Information Organization and the Mysterious
@@ -1114,7 +1127,7 @@ and Arrangement for Multicultural Archival Collections.''
 
 \hypertarget{ref-swogerux5fwhatux5f2012}{}
 Swoger, B. 2012. ``What Is Metadata? A Christmas-Themed Exploration.
-Info Culture.'' \emph{Sicientific American}.
+Info Culture.'' \emph{Scientific American}.
 \href{http://blogs.scientificamerican.com/information-\%20culture/2012/12/17/what-is-metadata-a-christmas-themed-exploration/}{http://blogs.scientificamerican.com/information- culture/2012/12/17/what-is-metadata-a-christmas-themed-exploration/}.
 
 \hypertarget{ref-teperux5fselectionux5f2014}{}
