--- a/bib/LIS501.bib
+++ b/bib/LIS501.bib
@@ -549,7 +549,7 @@ le processus d'apprentissage.},
 @misc{maxwell_bibliographic_2010,
 	edition = {Third},
 	title = {Bibliographic control. 497-505.},
-	url = {locate from: http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html]},
+	url = {http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html},
 	journal = {Encyclopedia of Library and Information Sciences,},
 	author = {Maxwell, R.L.},
 	year = {2010},
@@ -569,7 +569,7 @@ le processus d'apprentissage.},
 @article{swoger_what_2012,
 	title = {What is metadata? {A} {Christmas}-themed exploration. {Info} {Culture}.},
 	url = {http://blogs.scientificamerican.com/information- culture/2012/12/17/what-is-metadata-a-christmas-themed-exploration/},
-	journal = {Sicientific American},
+	journal = {Scientific American},
 	author = {Swoger, B.},
 	year = {2012}
 }
