--- a/bib/LIS501.md
+++ b/bib/LIS501.md
@@ -569,8 +569,8 @@ http://www.tandfonline.com/doi/full/10.1081/E-ELIS3-120043263.
 <div class="csl-entry">
 
 Maxwell, R.L. “Bibliographic Control. 497-505.” *Encyclopedia of Library
-and Information Sciences,* 2010. locate from:
-http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html\].
+and Information Sciences,* 2010.
+http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html.
 
 </div>
 
@@ -660,7 +660,7 @@ http://miriamsweeney.net/2012/06/20/readforgradschool/.
 <div class="csl-entry">
 
 Swoger, B. “What Is Metadata? A Christmas-Themed Exploration. Info
-Culture.” *Sicientific American*, 2012.
+Culture.” *Scientific American*, 2012.
 http://blogs.scientificamerican.com/information-
 culture/2012/12/17/what-is-metadata-a-christmas-themed-exploration/.
 
