Syllabus content updates

--- a/bib/EvaluationRequired.bib
+++ b/bib/EvaluationRequired.bib
@@ -1,4 +1,18 @@
 
+@article{nitecki_changing_1996,
+	title = {Changing the concept and measure of service quality in academic libraries},
+	volume = {22},
+	issn = {0099-1333},
+	url = {http://www.sciencedirect.com/science/article/pii/S0099133396900567},
+	doi = {10.1016/S0099-1333(96)90056-7},
+	number = {3},
+	journal = {The Journal of Academic Librarianship},
+	author = {Nitecki, Danuta A.},
+	month = jan,
+	year = {1996},
+	pages = {181--190}
+}
+
 @article{asher_paths_2013,
 	title = {Paths of {Discovery}: {Comparing} the {Search} {Effectiveness} of {EBSCO} {Discovery} {Service}, {Summon}, {Google} {Scholar}, and {Conventional} {Library} {Resources}},
 	volume = {74},
@@ -9,20 +23,4 @@
 	author = {Asher, Andrew D and Duke, Lynda M and Wilson, Suzanne},
 	year = {2013},
 	pages = {464--488}
-}
-
-@incollection{peters_philosophy_2002,
-	series = {Lecture {Notes} in {Computer} {Science}},
-	title = {The {Philosophy} of {Information} {Retrieval} {Evaluation}},
-	volume = {2406},
-	isbn = {978-3-540-44042-0},
-	url = {http://dx.doi.org/10.1007/3-540-45691-0_34},
-	language = {English},
-	booktitle = {Evaluation of {Cross}-{Language} {Information} {Retrieval} {Systems}},
-	publisher = {Springer Berlin Heidelberg},
-	author = {Voorhees, EllenM.},
-	editor = {Peters, Carol and Braschler, Martin and Gonzalo, Julio and Kluck, Michael},
-	month = jan,
-	year = {2002},
-	pages = {355--370}
 }
