--- a/bib/GeneralBackground.bib
+++ b/bib/GeneralBackground.bib
@@ -1,4 +1,26 @@
 
+@misc{asis&t_board_asis&t_2001,
+	title = {{ASIS}\&{T} {Educational} {Guidelines}},
+	url = {http://www.asis.org/Board/educational_guidelines.html},
+	language = {English},
+	journal = {Association for Information Science and Technology},
+	author = {{ASIS\&T Board}},
+	month = nov,
+	year = {2001}
+}
+
+@article{aufderheide_does_2016,
+	title = {‘{Does} {This} {Have} to {Go} through the {IRB}?’},
+	issn = {0009-5982},
+	shorttitle = {‘{Does} {This} {Have} to {Go} through the {IRB}?},
+	url = {http://chronicle.com/article/Does-This-Have-to-Go/237476/},
+	urldate = {2016-08-19TZ},
+	journal = {The Chronicle of Higher Education},
+	author = {Aufderheide, Patricia},
+	month = aug,
+	year = {2016}
+}
+
 @misc{american_library_assocation_knowledge_2006,
 	type = {Text},
 	title = {Knowledge and competencies statements developed by relevant professional organizations},
