--- a/bib/LIS501.bib
+++ b/bib/LIS501.bib
@@ -1,4 +1,80 @@
 
+@article{fuhr_evaluation_2007,
+	title = {Evaluation of digital libraries},
+	volume = {8},
+	issn = {1432-1300},
+	url = {http://dx.doi.org/10.1007/s00799-007-0011-z},
+	doi = {10.1007/s00799-007-0011-z},
+	abstract = {Digital libraries (DLs) are new and innovative information systems, under constant development and change, and therefore evaluation is of critical importance to ensure not only their correct evolution but also their acceptance by the user and application communities. The Evaluation activity of the DELOS Network of Excellence has performed a large-scale survey of current DL evaluation activities. This study has resulted in a description of the state of the art in the field, which is presented in this paper. The paper also proposes a new framework for the evaluation of DLs, as well as for recording, describing and analyzing the related research field. The framework includes a methodology for the classification of current evaluation procedures. The objective is to provide a set of flexible and adaptable guidelines for DL evaluation.},
+	number = {1},
+	journal = {International Journal on Digital Libraries},
+	author = {Fuhr, Norbert and Tsakonas, Giannis and Aalberg, Trond and Agosti, Maristella and Hansen, Preben and Kapidakis, Sarantos and Klas, Claus-Peter and Kovács, László and Landoni, Monica and Micsik, András and Papatheodorou, Christos and Peters, Carol and Sølvberg, Ingeborg},
+	year = {2007},
+	pages = {21--38}
+}
+
+@article{nitecki_changing_1996,
+	title = {Changing the concept and measure of service quality in academic libraries},
+	volume = {22},
+	issn = {0099-1333},
+	url = {http://www.sciencedirect.com/science/article/pii/S0099133396900567},
+	doi = {10.1016/S0099-1333(96)90056-7},
+	number = {3},
+	journal = {The Journal of Academic Librarianship},
+	author = {Nitecki, Danuta A.},
+	month = jan,
+	year = {1996},
+	pages = {181--190}
+}
+
+@book{connaway_basic_2010,
+	address = {Santa Barbara, Calif},
+	series = {Library and {Information} {Science} {Text} {Series}},
+	title = {Basic {Research} {Methods} for {Librarians}},
+	volume = {5th ed},
+	isbn = {978-1-59158-863-4},
+	url = {http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=348676&site=ehost-live},
+	abstract = {Powell's name appears first on the previous edition.},
+	language = {English},
+	publisher = {ABC-CLIO},
+	author = {Connaway, Lynn Silipigni and Powell, Ronald R.},
+	year = {2010},
+	keywords = {LANGUAGE ARTS \& DISCIPLINES / Library \& Information Science / General, Library science--Research--Methodology}
+}
+
+@misc{asis&t_board_asis&t_2001,
+	title = {{ASIS}\&{T} {Educational} {Guidelines}},
+	url = {http://www.asis.org/Board/educational_guidelines.html},
+	language = {English},
+	journal = {Association for Information Science and Technology},
+	author = {{ASIS\&T Board}},
+	month = nov,
+	year = {2001}
+}
+
+@article{aufderheide_does_2016,
+	title = {‘{Does} {This} {Have} to {Go} through the {IRB}?’},
+	issn = {0009-5982},
+	shorttitle = {‘{Does} {This} {Have} to {Go} through the {IRB}?},
+	url = {http://chronicle.com/article/Does-This-Have-to-Go/237476/},
+	urldate = {2016-08-19TZ},
+	journal = {The Chronicle of Higher Education},
+	author = {Aufderheide, Patricia},
+	month = aug,
+	year = {2016}
+}
+
+@incollection{walliman_defining_2006,
+	address = {London},
+	title = {Defining the research problem},
+	url = {http://methods.sagepub.com/book/social-research-methods},
+	booktitle = {Social {Research} {Methods}},
+	publisher = {SAGE Publications, Ltd},
+	author = {Walliman, Nicholas},
+	year = {2006},
+	pages = {67--74}
+}
+
 @incollection{ferraris_social_2011,
 	address = {Dordrecht},
 	series = {Law, {Governance} and {Technology} {Series}},
@@ -50,7 +126,7 @@ Approved and adopted as policy by the ALA Council, January 27th 2009}
 	pages = {265--272}
 }
 
-@incollection{brett_sutton_qualitative_2009,
+@incollection{sutton_qualitative_2009,
 	title = {Qualitative {Research} {Methods} in {Library} and {Information} {Science} [{ELIS} {Classic}]},
 	volume = {null},
 	isbn = {0-8493-9712-X},
@@ -58,7 +134,7 @@ Approved and adopted as policy by the ALA Council, January 27th 2009}
 	number = {null},
 	booktitle = {Encyclopedia of {Library} and {Information} {Sciences}, {Third} {Edition}},
 	publisher = {Taylor \& Francis},
-	author = {{Brett Sutton}},
+	author = {Sutton, Brett},
 	month = dec,
 	year = {2009},
 	pages = {4380--4393}
@@ -1058,7 +1134,7 @@ Conclusion. It is argued that this conception of browsing is closer to real huma
 	pages = {49--63}
 }
 
-@article{david_johnson_health-related_2014,
+@article{johnson_health-related_2014,
 	title = {Health-related information seeking: {Is} it worth it?},
 	volume = {50},
 	issn = {0306-4573},
@@ -1066,7 +1142,7 @@ Conclusion. It is argued that this conception of browsing is closer to real huma
 	doi = {10.1016/j.ipm.2014.06.001},
 	number = {5},
 	journal = {Information Processing \& Management},
-	author = {David Johnson, J.},
+	author = {Johnson, J. David},
 	month = sep,
 	year = {2014},
 	keywords = {Avoidance, Health-related information seeking, Human information behavior, Ignorance, Information seeking},
@@ -1083,7 +1159,7 @@ Conclusion. It is argued that this conception of browsing is closer to real huma
 	year = {2014}
 }
 
-@incollection{marcia_j._bates_information_2009-1,
+@incollection{bates_information_2009,
 	title = {Information {Behavior}},
 	volume = {null},
 	isbn = {0-8493-9712-X},
@@ -1092,7 +1168,7 @@ Conclusion. It is argued that this conception of browsing is closer to real huma
 	urldate = {2015-04-19},
 	booktitle = {Encyclopedia of {Library} and {Information} {Sciences}, {Third} {Edition}},
 	publisher = {Taylor \& Francis},
-	author = {{Marcia J. Bates}},
+	author = {Bates, Marcia J.},
 	month = dec,
 	year = {2009},
 	pages = {2381--2391}
@@ -1146,36 +1222,4 @@ Conclusion. It is argued that this conception of browsing is closer to real huma
 	month = jul,
 	year = {2011},
 	pages = {166--183}
-}
-
-@article{bates_invisible_1999,
-	title = {The invisible substrate of information science},
-	volume = {50},
-	issn = {1097-4571},
-	url = {http://dx.doi.org/10.1002/(SICI)1097-4571(1999)50:12<1043::AID-ASI1>3.0.CO;2-X},
-	doi = {10.1002/(SICI)1097-4571(1999)50:12<1043::AID-ASI1>3.0.CO;2-X},
-	number = {12},
-	journal = {Journal of the American Society for Information Science},
-	author = {Bates, Marcia J.},
-	month = jan,
-	year = {1999},
-	pages = {1043--1050}
-}
-
-@misc{sweeney_how_2012,
-	title = {How to {Read} for {Grad} {School}},
-	url = {http://miriamsweeney.net/2012/06/20/readforgradschool/},
-	urldate = {2015-04-15TZ},
-	author = {Sweeney, Miriam E.},
-	month = jun,
-	year = {2012}
-}
-
-@misc{levie_man_2004,
-	title = {The man who wanted to classify the world},
-	url = {http://www.aspresolver.com/aspresolver.asp?VASC;1641522},
-	abstract = {In 1934, a Belgian visionary named Paul Otlet conceived of a library with no physical books whose contents could be viewed on a screen. His obsession was to classify, encode and unify books and documents published all over the world. Over the years, he and his staff would fill in 12 million index cards. His classification system is regarded today as similar to hypertext, which enables us to navigate the internet. A pacifist and an internationalist, Otlet was one of the driving forces behind the League of Nations. He persuaded the architect Le Corbusier to design a World City dedicated to Peace, Knowledge and Fraternity. This beautiful film interweaves a vast fund of recently discovered documents from his archive with autobiographical material to create a fascinating piece of intellectual history.},
-	language = {English.},
-	author = {Levie, Françoise. and {Sofidoc Productions.}},
-	year = {2004}
 }
