--- a/bib/ResearchBackground.bib
+++ b/bib/ResearchBackground.bib
@@ -1,4 +1,30 @@
 
+@book{connaway_basic_2010,
+	address = {Santa Barbara, Calif},
+	series = {Library and {Information} {Science} {Text} {Series}},
+	title = {Basic {Research} {Methods} for {Librarians}},
+	volume = {5th ed},
+	isbn = {978-1-59158-863-4},
+	url = {http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=348676&site=ehost-live},
+	abstract = {Powell's name appears first on the previous edition.},
+	language = {English},
+	publisher = {ABC-CLIO},
+	author = {Connaway, Lynn Silipigni and Powell, Ronald R.},
+	year = {2010},
+	keywords = {LANGUAGE ARTS \& DISCIPLINES / Library \& Information Science / General, Library science--Research--Methodology}
+}
+
+@incollection{walliman_defining_2006,
+	address = {London},
+	title = {Defining the research problem},
+	url = {http://methods.sagepub.com/book/social-research-methods},
+	booktitle = {Social {Research} {Methods}},
+	publisher = {SAGE Publications, Ltd},
+	author = {Walliman, Nicholas},
+	year = {2006},
+	pages = {67--74}
+}
+
 @article{fidel_are_2008,
 	title = {Are we there yet?: {Mixed} methods research in library and information science},
 	volume = {30},
@@ -14,7 +40,7 @@
 	pages = {265--272}
 }
 
-@incollection{brett_sutton_qualitative_2009,
+@incollection{sutton_qualitative_2009,
 	title = {Qualitative {Research} {Methods} in {Library} and {Information} {Science} [{ELIS} {Classic}]},
 	volume = {null},
 	isbn = {0-8493-9712-X},
@@ -22,7 +48,7 @@
 	number = {null},
 	booktitle = {Encyclopedia of {Library} and {Information} {Sciences}, {Third} {Edition}},
 	publisher = {Taylor \& Francis},
-	author = {{Brett Sutton}},
+	author = {Sutton, Brett},
 	month = dec,
 	year = {2009},
 	pages = {4380--4393}
