--- a/bib/UseUsersBackground.bib
+++ b/bib/UseUsersBackground.bib
@@ -75,7 +75,7 @@
 	pages = {49--63}
 }
 
-@article{david_johnson_health-related_2014,
+@article{johnson_health-related_2014,
 	title = {Health-related information seeking: {Is} it worth it?},
 	volume = {50},
 	issn = {0306-4573},
@@ -83,7 +83,7 @@
 	doi = {10.1016/j.ipm.2014.06.001},
 	number = {5},
 	journal = {Information Processing \& Management},
-	author = {David Johnson, J.},
+	author = {Johnson, J. David},
 	month = sep,
 	year = {2014},
 	keywords = {Avoidance, Health-related information seeking, Human information behavior, Ignorance, Information seeking},
@@ -100,7 +100,7 @@
 	year = {2014}
 }
 
-@incollection{marcia_j._bates_information_2009,
+@incollection{bates_information_2009,
 	title = {Information {Behavior}},
 	volume = {null},
 	isbn = {0-8493-9712-X},
@@ -109,7 +109,7 @@
 	urldate = {2015-04-19},
 	booktitle = {Encyclopedia of {Library} and {Information} {Sciences}, {Third} {Edition}},
 	publisher = {Taylor \& Francis},
-	author = {{Marcia J. Bates}},
+	author = {Bates, Marcia J.},
 	month = dec,
 	year = {2009},
 	pages = {2381--2391}
