--- a/bib/LIS501.md
+++ b/bib/LIS501.md
@@ -48,6 +48,22 @@ Libraries* 74, no. 5 (2013): 464–88. doi:10.5860/crl-374.
 
 <div class="csl-entry">
 
+ASIS&T Board. “ASIS&T Educational Guidelines.” *Association for
+Information Science and Technology*, November 8, 2001.
+http://www.asis.org/Board/educational\_guidelines.html.
+
+</div>
+
+<div class="csl-entry">
+
+Aufderheide, Patricia. “‘Does This Have to Go through the IRB?’” *The
+Chronicle of Higher Education*, August 17, 2016.
+http://chronicle.com/article/Does-This-Have-to-Go/237476/.
+
+</div>
+
+<div class="csl-entry">
+
 Barton, Joshua, and Lucas Mak. “Old Hopes, New Possibilities:
 Next-Generation Catalogues and the Centralization of Access.” *Library
 Trends* 61, no. 1 (2012): 83–106. doi:10.1353/lib.2012.0030.
@@ -65,9 +81,18 @@ http://www.emeraldinsight.com/doi/abs/10.1108/00220411111124532.
 
 <div class="csl-entry">
 
-Bates, Marcia J. “The Invisible Substrate of Information Science.”
-*Journal of the American Society for Information Science* 50, no. 12
-(January 1, 1999): 1043–50.
+Bates, Marcia J. “Information Behavior.” In *Encyclopedia of Library and
+Information Sciences, Third Edition*, null:2381–91. null. Taylor &
+Francis, 2009.
+http://www.tandfonline.com/doi/full/10.1081/E-ELIS3-120043263.
+
+</div>
+
+<div class="csl-entry">
+
+———. “The Invisible Substrate of Information Science.” *Journal of the
+American Society for Information Science* 50, no. 12 (January 1, 1999):
+1043–50.
 doi:10.1002/(SICI)1097-4571(1999)50:12&lt;1043::AID-ASI1&gt;3.0.CO;2-X.
 
 </div>
@@ -140,15 +165,6 @@ ca.1550-1700.” *Journal of the History of Ideas* 64, no. 1 (2003):
 
 <div class="csl-entry">
 
-Brett Sutton. “Qualitative Research Methods in Library and Information
-Science \[ELIS Classic\].” In *Encyclopedia of Library and Information
-Sciences, Third Edition*, null:4380–93. null. Taylor & Francis, 2009.
-http://dx.doi.org/10.1081/E-ELIS3-120044785.
-
-</div>
-
-<div class="csl-entry">
-
 Brown-Sica, Margaret, and Jeffrey Beall. “Library 2.0 and the Problem of
 Hate Speech.” *Electronic Journal of Academic and Special Librarianship*
 9, no. 2 (2008).
@@ -210,10 +226,18 @@ http://www.oclc.org/content/dam/research/publications/library/2014/oclcresearch-
 
 <div class="csl-entry">
 
-Connaway, Lynn Silipigni, and Ronald R. Powell. “Selecting the Research
-Method.” In *Basic Research Methods for Librarians*, 71–106. Library and
-Information Science Text Series. Santa Barbara, Calif: Libraries
-Unlimited, 2010.
+Connaway, Lynn Silipigni, and Ronald R. Powell. *Basic Research Methods
+for Librarians*. Vol. 5th ed. Library and Information Science Text
+Series. Santa Barbara, Calif: ABC-CLIO, 2010.
+http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=348676&site=ehost-live.
+
+</div>
+
+<div class="csl-entry">
+
+———. “Selecting the Research Method.” In *Basic Research Methods for
+Librarians*, 71–106. Library and Information Science Text Series. Santa
+Barbara, Calif: Libraries Unlimited, 2010.
 http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=348676&site=ehost-live.
 
 </div>
@@ -223,14 +247,6 @@ http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=348676&site=ehost
 Coombs, James H., Allen H. Renear, and Steven J. DeRose. “Markup Systems
 and the Future of Scholarly Text Processing.” *Commun. ACM* 30, no. 11
 (November 1987): 933–47. doi:10.1145/32206.32209.
-
-</div>
-
-<div class="csl-entry">
-
-David Johnson, J. “Health-Related Information Seeking: Is It Worth It?”
-*Information Processing & Management* 50, no. 5 (September 2014):
-708–17. doi:10.1016/j.ipm.2014.06.001.
 
 </div>
 
@@ -307,6 +323,15 @@ Evan Golub, and Hilary Hutchinson. “Children’s Search Roles at Home:
 Implications for Designers, Researchers, Educators, and Parents.”
 *Journal of the American Society for Information Science and Technology*
 63, no. 3 (March 1, 2012): 558–73. doi:10.1002/asi.21700.
+
+</div>
+
+<div class="csl-entry">
+
+Fuhr, Norbert, Giannis Tsakonas, Trond Aalberg, Maristella Agosti,
+Preben Hansen, Sarantos Kapidakis, Claus-Peter Klas, et al. “Evaluation
+of Digital Libraries.” *International Journal on Digital Libraries* 8,
+no. 1 (2007): 21–38. doi:10.1007/s00799-007-0011-z.
 
 </div>
 
@@ -492,6 +517,14 @@ Information.” *Journal of Education for Library and Information Science*
 
 <div class="csl-entry">
 
+Johnson, J. David. “Health-Related Information Seeking: Is It Worth It?”
+*Information Processing & Management* 50, no. 5 (September 2014):
+708–17. doi:10.1016/j.ipm.2014.06.001.
+
+</div>
+
+<div class="csl-entry">
+
 Junus, Ranti. “Digital Collections and Accessibility.” MSU Libraries
 Blogs. *Digital Scholarship Collaborative Sandbox*, November 11–14,
 2014.
@@ -560,14 +593,6 @@ Francis, 2009. http://dx.doi.org/10.1081/E-ELIS3-120045519.
 
 <div class="csl-entry">
 
-———. “Information Behavior.” In *Encyclopedia of Library and Information
-Sciences, Third Edition*, null:2381–91. null. Taylor & Francis, 2009.
-http://www.tandfonline.com/doi/full/10.1081/E-ELIS3-120043263.
-
-</div>
-
-<div class="csl-entry">
-
 Maxwell, R.L. “Bibliographic Control. 497-505.” *Encyclopedia of Library
 and Information Sciences,* 2010.
 http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html.
@@ -597,6 +622,14 @@ Naumer, Charles M., and Karen E. Fisher. “Information Needs.” In
 *Encyclopedia of Library and Information Sciences, Third Edition*,
 null:2452–58. null. Taylor & Francis, 2009.
 http://www.tandfonline.com/doi/abs/10.1081/E-ELIS3-120043243.
+
+</div>
+
+<div class="csl-entry">
+
+Nitecki, Danuta A. “Changing the Concept and Measure of Service Quality
+in Academic Libraries.” *The Journal of Academic Librarianship* 22, no.
+3 (January 1, 1996): 181–90. doi:10.1016/S0099-1333(96)90056-7.
 
 </div>
 
@@ -647,6 +680,15 @@ Shilton, Katie, and Ramesh Srinivasan. “Participatory Appraisal and
 Arrangement for Multicultural Archival Collections.” *Archivaria* 63
 (2007): 87.
 http://rameshsrinivasan.org/wordpress/wp-content/uploads/2010/03/8-Final-ShiltonSrinivasan-Archivaria.pdf.
+
+</div>
+
+<div class="csl-entry">
+
+Sutton, Brett. “Qualitative Research Methods in Library and Information
+Science \[ELIS Classic\].” In *Encyclopedia of Library and Information
+Sciences, Third Edition*, null:4380–93. null. Taylor & Francis, 2009.
+http://dx.doi.org/10.1081/E-ELIS3-120044785.
 
 </div>
 
@@ -721,6 +763,14 @@ In *Evaluation of Cross-Language Information Retrieval Systems*, edited
 by Carol Peters, Martin Braschler, Julio Gonzalo, and Michael Kluck,
 2406:355–70. Lecture Notes in Computer Science. Springer Berlin
 Heidelberg, 2002. http://dx.doi.org/10.1007/3-540-45691-0\_34.
+
+</div>
+
+<div class="csl-entry">
+
+Walliman, Nicholas. “Defining the Research Problem.” In *Social Research
+Methods*, 67–74. London: SAGE Publications, Ltd, 2006.
+http://methods.sagepub.com/book/social-research-methods.
 
 </div>
 
