--- a/bib/ResearchRequired.bib
+++ b/bib/ResearchRequired.bib
@@ -1,4 +1,16 @@
 
+@article{aufderheide_does_2016,
+	title = {‘{Does} {This} {Have} to {Go} through the {IRB}?’},
+	issn = {0009-5982},
+	shorttitle = {‘{Does} {This} {Have} to {Go} through the {IRB}?},
+	url = {http://chronicle.com/article/Does-This-Have-to-Go/237476/},
+	urldate = {2016-08-19TZ},
+	journal = {The Chronicle of Higher Education},
+	author = {Aufderheide, Patricia},
+	month = aug,
+	year = {2016}
+}
+
 @article{shachaf_are_2006,
 	title = {Are virtual reference services color blind?},
 	volume = {28},
