--- a/bib/GeneralBackground.bib
+++ b/bib/GeneralBackground.bib
@@ -46,8 +46,8 @@ Approved and adopted as policy by the ALA Council, January 27th 2009}
 @book{glushko_discipline_2013,
 	address = {Cambridge, MA},
 	title = {The {Discipline} of {Organizing}},
-	isbn = {9780262518505},
-	url = {http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=709195&site=ehost-live},
+	isbn = {978-0-262-51850-5},
+	url = {http://disciplineoforganizing.org},
 	publisher = {The MIT Press},
 	author = {Glushko, Robert J.},
 	year = {2013},
