--- a/bib/LIS501.md
+++ b/bib/LIS501.md
@@ -190,8 +190,7 @@ doi:10.1002/(SICI)1097-4571(199709)48:9&lt;804::AID-ASI5&gt;3.0.CO;2-V.
 
 <div class="csl-entry">
 
-Bush, Vannevar. “As We May Think.” *The Atlantic Monthly* 176, no. 1
-(1945): 101–8.
+Bush, Vannevar. “As We May Think.” *The Atlantic Monthly*, 1945.
 http://www.theatlantic.com/unbound/flashbks/computer/bushf.htm.
 
 </div>
@@ -426,7 +425,7 @@ http://disciplineoforganizing.org/.
 <div class="csl-entry">
 
 ———. *The Discipline of Organizing*. Cambridge, MA: The MIT Press, 2013.
-http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=709195&site=ehost-live.
+http://disciplineoforganizing.org.
 
 </div>
 
@@ -553,7 +552,6 @@ http://www.tandfonline.com/doi/abs/10.1080/01639374.2012.740610.
 
 Lavoie, Brian, Lorcan Dempsey, and Lynn Silipigni Connaway. “Making Data
 Work Harder.” *Library Journal* 131, no. 1 (January 1, 2006): 40–42.
-http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=19426604&site=ehost-live.
 
 </div>
 
@@ -569,9 +567,8 @@ https://journal.lib.uoguelph.ca/index.php/perj/article/view/1427.
 
 <div class="csl-entry">
 
-Levie, Françoise., and Sofidoc Productions. “The Man Who Wanted to
-Classify the World,” 2004.
-http://www.aspresolver.com/aspresolver.asp?VASC;1641522.
+Levie, Françoise., and Sofidoc Productions. *The Man Who Wanted to
+Classify the World*, 2004.
 
 </div>
 
@@ -587,7 +584,7 @@ Library Collecting.” *College & Research Libraries* 14, no. 2 (2013):
 
 Marcia J. Bates. “Information.” In *Encyclopedia of Library and
 Information Sciences, Third Edition*, null:2347–60. null. Taylor &
-Francis, 2009. http://dx.doi.org/10.1081/E-ELIS3-120045519.
+Francis, 2009.
 
 </div>
 
@@ -809,9 +806,8 @@ doi:10.1177/0165551508091309.
 
 <div class="csl-entry">
 
-Wright, Alex. *Cataloging the World : Paul Otlet and the Birth of the
+Wright, Alex. *Cataloging the World: Paul Otlet and the Birth of the
 Information Age*. Oxford: Oxford University Press, 2014.
-http://vufind.carli.illinois.edu/vf-uiu/Record/uiu\_7507894.
 
 </div>
 
