--- a/bib/IntroductionBackground.bib
+++ b/bib/IntroductionBackground.bib
@@ -10,7 +10,7 @@
 	pages = {33--96}
 }
 
-@misc{wright_secret_2014,
+@article{wright_secret_2014,
 	title = {The {Secret} {History} of {Hypertext} — {The} {Atlantic}},
 	url = {http://www.theatlantic.com/technology/archive/2014/05/in-search-of-the-proto-memex/371385/},
 	urldate = {2015-04-15TZ},
@@ -21,9 +21,8 @@
 
 @book{wright_cataloging_2014,
 	address = {Oxford},
-	title = {Cataloging the {World} : {Paul} {Otlet} and the {Birth} of the {Information} {Age}},
-	isbn = {9780199931415},
-	url = {http://vufind.carli.illinois.edu/vf-uiu/Record/uiu_7507894},
+	title = {Cataloging the {World}: {Paul} {Otlet} and the {Birth} of the {Information} {Age}},
+	isbn = {978-0-19-993141-5},
 	publisher = {Oxford University Press},
 	author = {Wright, Alex},
 	year = {2014},
@@ -32,7 +31,6 @@
 
 @misc{levie_man_2004,
 	title = {The man who wanted to classify the world},
-	url = {http://www.aspresolver.com/aspresolver.asp?VASC;1641522},
 	abstract = {In 1934, a Belgian visionary named Paul Otlet conceived of a library with no physical books whose contents could be viewed on a screen. His obsession was to classify, encode and unify books and documents published all over the world. Over the years, he and his staff would fill in 12 million index cards. His classification system is regarded today as similar to hypertext, which enables us to navigate the internet. A pacifist and an internationalist, Otlet was one of the driving forces behind the League of Nations. He persuaded the architect Le Corbusier to design a World City dedicated to Peace, Knowledge and Fraternity. This beautiful film interweaves a vast fund of recently discovered documents from his archive with autobiographical material to create a fascinating piece of intellectual history.},
 	language = {English.},
 	author = {Levie, Françoise. and {Sofidoc Productions.}},
