--- a/bib/LIS501.bib
+++ b/bib/LIS501.bib
@@ -986,8 +986,8 @@ Conclusion. It is argued that this conception of browsing is closer to real huma
 @book{glushko_discipline_2013,
 	address = {Cambridge, MA},
 	title = {The {Discipline} of {Organizing}},
-	isbn = {9780262518505},
-	url = {http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=709195&site=ehost-live},
+	isbn = {978-0-262-51850-5},
+	url = {http://disciplineoforganizing.org},
 	publisher = {The MIT Press},
 	author = {Glushko, Robert J.},
 	year = {2013},
@@ -1010,7 +1010,6 @@ Conclusion. It is argued that this conception of browsing is closer to real huma
 	title = {Information},
 	volume = {null},
 	isbn = {0-8493-9712-X},
-	url = {http://dx.doi.org/10.1081/E-ELIS3-120045519},
 	number = {null},
 	urldate = {2015-06-01},
 	booktitle = {Encyclopedia of {Library} and {Information} {Sciences}, {Third} {Edition}},
@@ -1025,7 +1024,6 @@ Conclusion. It is argued that this conception of browsing is closer to real huma
 	title = {Making {Data} {Work} {Harder}},
 	volume = {131},
 	issn = {03630277},
-	url = {http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=19426604&site=ehost-live},
 	abstract = {The article argues that in a world of constantly increasing digital resources, libraries must work harder to make their data interesting, accessible and relevant. Areas were libraries will benefit by making their data work harder include collaborative collection management, collection views, library decision-making, user behavior and trend spotting. Extensive information about one's own library as well as outside resources can help make resources more useful.},
 	number = {1},
 	journal = {Library Journal},
@@ -1059,7 +1057,6 @@ Conclusion. It is argued that this conception of browsing is closer to real huma
 	title = {What is a “document”?},
 	volume = {48},
 	issn = {1097-4571},
-	url = {http://dx.doi.org/10.1002/(SICI)1097-4571(199709)48:9<804::AID-ASI5>3.0.CO;2-V},
 	doi = {10.1002/(SICI)1097-4571(199709)48:9<804::AID-ASI5>3.0.CO;2-V},
 	number = {9},
 	journal = {Journal of the American Society for Information Science},
@@ -1188,7 +1185,7 @@ Conclusion. It is argued that this conception of browsing is closer to real huma
 	pages = {71--106}
 }
 
-@misc{wright_secret_2014,
+@article{wright_secret_2014,
 	title = {The {Secret} {History} of {Hypertext} — {The} {Atlantic}},
 	url = {http://www.theatlantic.com/technology/archive/2014/05/in-search-of-the-proto-memex/371385/},
 	urldate = {2015-04-15TZ},
@@ -1199,9 +1196,8 @@ Conclusion. It is argued that this conception of browsing is closer to real huma
 
 @book{wright_cataloging_2014,
 	address = {Oxford},
-	title = {Cataloging the {World} : {Paul} {Otlet} and the {Birth} of the {Information} {Age}},
-	isbn = {9780199931415},
-	url = {http://vufind.carli.illinois.edu/vf-uiu/Record/uiu_7507894},
+	title = {Cataloging the {World}: {Paul} {Otlet} and the {Birth} of the {Information} {Age}},
+	isbn = {978-0-19-993141-5},
 	publisher = {Oxford University Press},
 	author = {Wright, Alex},
 	year = {2014},
@@ -1213,7 +1209,6 @@ Conclusion. It is argued that this conception of browsing is closer to real huma
 	volume = {52},
 	copyright = {Copyright © 2011 Association for Library and Information Science Education (ALISE)},
 	issn = {07485786},
-	url = {http://www.jstor.org/stable/41308894},
 	doi = {10.2307/41308894},
 	abstract = {While LIS continues to struggle with representation of populations traditionally considered as core to diversity, socio-economic and technological changes have significantly increased the range of populations that are disadvantaged underrepresented, and excluded in terms of information. Drawing from studies of diversity in LIS education and professions, as well as national demographic data, this article: (1 ) examines understandings of diversity within the field; (2) analyzes the implications of diversity in education, recruiting, and scholarship; and (3) explores models for inclusive diversity education. This paper argues that the field needs to embrace a broader, more inclusive understanding of diversity to remain culturally relevant.},
 	number = {3},
